feat: new state manager

--- a/src/app/counter-output/counter-output.component.html
+++ b/src/app/counter-output/counter-output.component.html
@@ -1,2 +1,1 @@
-<p class="counter">{{ count$ | async }}</p>
-<p class="counter">Double: {{ double$ | async }}</p>
+<p class="counter">{{ (state$ | async)?.counter }}</p>
